# trade-execution

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  get-pants.sh  pants.ci.toml  pants.toml  pyproject.toml  requirements.txt  setup.cfg  test.html
.github/workflows/: pants.yaml
src/trade_execution/: main.py
src/trade_execution/api/: BUILD  server.py
src/trade_execution/entity/: __init__.py  entity_core.py
src/trade_execution/handlers/: BUILD  order_book_handler.py  order_handler.py  order_status_handler.py
src/trade_execution/logic/: BUILD  logic_core.py
src/trade_execution/models/: APIConnectInfo.py  Account.py  BUILD  ConnectionManager.py  Order.py  OrderBook.py  StrategyBase.py  Trade.py
src/trade_execution/services/: BUILD  backtest_service.py
src/trade_execution/strategies/: BUILD  StrategyBase.py  base.py  double_ma.py  mean_reversion.py  moving_average.py
tests/trade_execution/: BUILD  test_entity.py
