[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-api"
description = "Binance API Usage for FYP-Terminal"
readme = "README.md"
dependencies = [

]
dynamic = ["version"]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

